[package]
name = "testffmpeg"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "7.1.0"
anyhow = "1.0.95"
sdl2 = "0.37.0"
byteorder = "1.4"
cpal = "0.15.3"
ringbuf = "0.4.7"
bytemuck = "1.23.0"
once_mut = "0.1.1"
futures = "0.3.31"
smol = "2.0.2"
tokio = { version = "1.45.0", features = ["full"] }
simple_logger = "4.0.0"
log = "0.4"
crossterm = "0.29.0"
eframe = "0.31.1"
rfd = "0.15.3"
atomic = "0.6.0"
chrono = "0.4.41"
parking_lot = "0.12.4"
timer = "0.2.0"
nom = "8.0.0"
crossbeam-channel = "0.5.15"
egui = "0.33.3"
image = "0.25.9"